force-app/main/default/objects/Submission_Forms__c/Submission_Forms__c.object-meta.xml
<CustomObject>
    <label>Submission Forms</label>
    <nameField>
        <label>Submission Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submission Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>