force-app/main/default/objects/Submission_Forms__c/fields/Insurance_Submission__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Submission</label>
    <referenceTo>Insurance_Policy__c</referenceTo>
    <relationshipLabel>Submission Forms</relationshipLabel>
    <relationshipName>Submission_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>