force-app/main/default/objects/Submission_Forms__c/fields/View_Form__c.field-meta.xml
<CustomField>
    <fullName>View_Form__c</fullName>
    <formula>HYPERLINK(Form_URL__c , &quot;View&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Form</label>
    <type>Text</type>
</CustomField>