force-app/main/default/objects/Submission_Forms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form_Name__c</columns>
    <columns>Form_URL__c</columns>
    <columns>Insurance_Submission__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>